--- a/projects/johnsjo3/teammate1Dominion/Makefile
+++ b/projects/johnsjo3/teammate1Dominion/Makefile
@@ -1,6 +1,4 @@
-CFLAGS = -Wall -fpic -coverage -lm -fprofile-arcs -ftest-coverage
-
-all: playdom player testDrawCard testBuyCard badTestDrawCard randomtestcard randomtestadventurer unittest1 unittest2 unittest3 unittest4 cardtest2 cardtest1 cardtest3 cardtest4 randomtestcard.out unittestresults.out randomtestadventurer.out
+CFLAGS = -Wall -fpic -coverage -lm
 
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
@@ -31,105 +29,33 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unittestresults.out: clean unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c dominion.o rngs.o
+	gcc -o unittest1 dominion.o rngs.o unittest1.c $(CFLAGS)
+	unittest1 >> unittestresults.out
+	gcc -o unittest2 dominion.o rngs.o unittest2.c $(CFLAGS)
+	unittest2 1000 >> unittestresults.out
+	gcc -o unittest3 dominion.o rngs.o unittest3.c $(CFLAGS)
+	unittest3 >> unittestresults.out
+	gcc -o unittest4 dominion.o rngs.o unittest4.c $(CFLAGS)
+	unittest4 100 >> unittestresults.out
+	gcc -o cardtest1 dominion.o rngs.o cardtest1.c $(CFLAGS)
+	cardtest1 100 >> unittestresults.out
+	gcc -o cardtest2 dominion.o rngs.o cardtest2.c $(CFLAGS)
+	cardtest2 100 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+randomtestadventurer.out: clean randomtestadventurer.c dominion.o rngs.o
+	gcc -o randomtestadventurer dominion.o rngs.o randomtestadventurer.c $(CFLAGS)
+	randomtestadventurer 1000 > randomtestadventurer.out
+	
+randomtestcard.out: clean randomtestcard.c dominion.o rngs.o
+	gcc -o randomtestcard dominion.o rngs.o randomtestcard.c $(CFLAGS)
+	randomtestcard 1000 > randomtestcard.out
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
-	
-unittest1: unittest1.c dominion.o rngs.o interface.o
-	gcc -o unittest1 unittest1.c -g dominion.o rngs.o interface.o $(CFLAGS)
-	
-unittest2: unittest2.c dominion.o rngs.o
-	gcc -o unittest2 unittest2.c -g dominion.o rngs.o $(CFLAGS)
-	
-unittest3: unittest3.c dominion.o rngs.o
-	gcc -o unittest3 unittest3.c -g dominion.o rngs.o $(CFLAGS)
-	
-unittest4: unittest4.c dominion.o rngs.o interface.o
-	gcc -o unittest4 unittest4.c -g dominion.o rngs.o interface.o $(CFLAGS)
 
-cardtest4: cardtest4.c dominion.o rngs.o interface.o
-	gcc -o cardtest4 cardtest4.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-cardtest2: cardtest2.c dominion.o rngs.o interface.o
-	gcc -o cardtest2 cardtest2.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-cardtest3: cardtest3.c dominion.o rngs.o interface.o
-	gcc -o cardtest3 cardtest3.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-cardtest1: cardtest1.c dominion.o rngs.o interface.o
-	gcc -o cardtest1 cardtest1.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-randomtestadventurer: randomtestadventurer.c dominion.o rngs.o interface.o
-	gcc -o randomtestadventurer randomtestadventurer.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-randomtestadventurer.out: randomtestadventurer.c dominion.c rngs.o interface.o
-	echo "Results for running unit test:" > randomtestadventurer.out
-
-	echo "randomtestadventurer.c" > randomtestadventurer.out
-	gcc -o randomtestadventurer randomtestadventurer.c dominion.c rngs.o interface.o -g $(CFLAGS)
-	randomtestadventurer >> randomtestadventurer.out
-	gcov -b randomtestadventurer >> randomtestadventurer.out
-	
-randomtestcard: randomtestcard.c dominion.o rngs.o interface.o
-	gcc -o randomtestcard randomtestcard.c -g dominion.o rngs.o interface.o $(CFLAGS)
-
-randomtestcard.out: randomtestcard.c dominion.c rngs.o interface.o
-	echo "Results for running unit test:" > randomtestcard.out
-
-	echo "randomtestcard.c" > randomtestcard.out
-	gcc -o randomtestcard randomtestcard.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	randomtestcard >> randomtestcard.out
-	gcov -b randomtestcard >> randomtestcard.out
-
-unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest4.c cardtest3.c cardtest2.c dominion.c rngs.o interface.o
-	echo "Result for running unit tests:" > unittestresults.out
-	
-	echo "unittest1.c" >> unittestresults.out
-	gcc -o unittest1 unittest1.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	unittest1 >> unittestresults.out
-	gcov -b unittest1 >> unittestresults.out
-	
-	echo "unittest2.c" >> unittestresults.out
-	gcc -o unittest2 unittest2.c -g dominion.c rngs.o $(CFLAGS)
-	unittest2 >> unittestresults.out
-	gcov -b unittest2 >> unittestresults.out
-	
-	echo "unittest3.c" >> unittestresults.out
-	gcc -o unittest3 unittest3.c -g dominion.c rngs.o $(CFLAGS)
-	unittest3 >> unittestresults.out
-	gcov -b unittest3 >> unittestresults.out
-	
-	echo "unittest4.c" >> unittestresults.out
-	gcc -o unittest4 unittest4.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	unittest4 >> unittestresults.out
-	gcov -b unittest4 >> unittestresults.out
-
-	echo "cardtest1.c" >> unittestresults.out
-	gcc -o cardtest1 cardtest1.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	cardtest1 >> unittestresults.out
-	gcov -b cardtest1 >> unittestresults.out
-
-	echo "cardtest2.c" >> unittestresults.out
-	gcc -o cardtest2 cardtest2.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	cardtest2 >> unittestresults.out
-	gcov -b cardtest2 >> unittestresults.out
-
-	echo "cardtest3.c" >> unittestresults.out
-	gcc -o cardtest3 cardtest3.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	cardtest3 >> unittestresults.out
-	gcov -b cardtest3 >> unittestresults.out
-
-	echo "cardtest4.c" >> unittestresults.out
-	gcc -o cardtest4 cardtest4.c -g dominion.c rngs.o interface.o $(CFLAGS)
-	cardtest4 >> unittestresults.out
-	gcov -b cardtest4 >> unittestresults.out
+all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe
-	unittest1.exe cardtest1.exe cardtest1 cardtest2.exe cardtest2 cardtest3.exe cardtest3 unittest1 unittest2.exe unittest2 unittest3.exe unittest3 unittest4.exe unittest4 cardtest4.exe cardtest4
-	randomtestcard randomtestcard.exe randomtestadventurer randomtestadventurer.exe *.gcov *.gcda *.gcno *.so
-	
-	
-	
-	
-	
-	
+	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe *.gcov *.gcda *.gcno *.so
