--- a/projects/ratclier/teammate1Dominion/unittests_assign3/Makefile
+++ b/projects/ratclier/teammate1Dominion/unittests_assign3/Makefile
@@ -1,4 +1,4 @@
-CFLAGS = -Wall -fpic -coverage -I.. -std=c99 -lm
+CFLAGS = -Wall -fpic -coverage -I.. -I../randomtests_assign4 -std=c99 -lm
 
 default: tests.out
 
@@ -14,11 +14,14 @@ cardtest1: cardtest1.c unittest_helpers.o dominion.o rngs.o
 cardtest2: cardtest2.c unittest_helpers.o dominion.o rngs.o
 	gcc -o cardtest2 -g cardtest2.c unittest_helpers.o dominion.o rngs.o $(CFLAGS)
 
-cardtest3: cardtest3.c unittest_helpers.o dominion.o rngs.o
-	gcc -o cardtest3 -g cardtest3.c unittest_helpers.o dominion.o rngs.o $(CFLAGS)
+cardtest3: cardtest3.c unittest_helpers.o randomtest_helpers.o dominion.o rngs.o
+	gcc -o cardtest3 -g cardtest3.c unittest_helpers.o randomtest_helpers.o dominion.o rngs.o $(CFLAGS)
 
 cardtest4: cardtest4.c unittest_helpers.o dominion.o rngs.o
 	gcc -o cardtest4 -g cardtest4.c unittest_helpers.o dominion.o rngs.o $(CFLAGS)
+
+randomtest_helpers.o: ../randomtests_assign4/randomtest_helpers.c
+	gcc -c ../randomtests_assign4/randomtest_helpers.c -g  $(CFLAGS)
 
 unittest_helpers.o: unittest_helpers.c
 	gcc -c unittest_helpers.c -g  $(CFLAGS)
@@ -35,7 +38,7 @@ unittest3: unittest3.c unittest_helpers.o dominion.o rngs.o
 unittest4: unittest4.c unittest_helpers.o dominion.o rngs.o
 	gcc -o unittest4 -g unittest4.c unittest_helpers.o dominion.o rngs.o $(CFLAGS)
 
-tests.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2.c unittest3.c unittest4.c unittest_helpers.c ../dominion.c ../rngs.c
+tests.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2.c unittest3.c unittest4.c unittest_helpers.c ../randomtests_assign4/randomtest_helpers.c ../dominion.c ../rngs.c
 	echo "Result for running dominion.c tests:\n" > ../unittestresults.out
 	
 	echo ">>> START OF unittest1.c:" >> ../unittestresults.out
@@ -87,7 +90,7 @@ tests.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2
 	echo "\n" >> ../unittestresults.out
 
 	echo ">>> START OF cardtest3.c:" >> ../unittestresults.out
-	gcc -o cardtest3 -g cardtest3.c unittest_helpers.c ../dominion.c ../rngs.c $(CFLAGS)
+	gcc -o cardtest3 -g cardtest3.c unittest_helpers.c ../randomtests_assign4/randomtest_helpers.c ../dominion.c ../rngs.c $(CFLAGS)
 	./cardtest3 >> ../unittestresults.out
 	echo ">>> COVERAGE: dominion.c after cardtest3:" >> ../unittestresults.out
 	gcov -fb dominion.c >> ../unittestresults.out
@@ -100,7 +103,7 @@ tests.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2
 	echo ">>> COVERAGE: dominion.c after cardtest4:" >> ../unittestresults.out
 	gcov -fb dominion.c >> ../unittestresults.out
 	echo ">>> END OF cardtest4.c\n" >> ../unittestresults.out
- 
+
 clean:
 	rm ../unittestresults.out
 
