--- a/projects/miltons/teammate1Dominion/Makefile
+++ b/projects/miltons/teammate1Dominion/Makefile
@@ -29,76 +29,63 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unittestresults.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2.c unittest3.c unittest4.c dominion.c rngs.c
+	echo "cardtest1.c results: " >> unittestresults.out
+	gcc -o cardtest1 dominion.c rngs.c cardtest1.c $(CFLAGS)
+	cardtest1 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "cardtest2.c results: " >> unittestresults.out
+	gcc -o cardtest2 dominion.c rngs.c cardtest2.c $(CFLAGS)
+	cardtest2 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "cardtest3.c results: " >> unittestresults.out
+	gcc -o cardtest3 dominion.c rngs.c cardtest3.c $(CFLAGS)
+	cardtest3 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "cardtest4.c results: " >> unittestresults.out
+	gcc -o cardtest4 dominion.c rngs.c cardtest4.c $(CFLAGS)
+	cardtest4 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "unittest1.c results: " >> unittestresults.out
+	gcc -o unittest1 dominion.c rngs.c unittest1.c $(CFLAGS)
+	unittest1 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "unittest2.c results: " >> unittestresults.out
+	gcc -o unittest2 dominion.c rngs.c unittest2.c $(CFLAGS)
+	unittest2 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "unittest3.c results: " >> unittestresults.out
+	gcc -o unittest3 dominion.c rngs.c unittest3.c $(CFLAGS)
+	unittest3 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
+	echo "unittest4.c results: " >> unittestresults.out
+	gcc -o unittest4 dominion.c rngs.c unittest4.c $(CFLAGS)
+	unittest4 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard
+randomtestcard.out: randomtestcard.c dominion.c rngs.c
+	echo "randomtestcard.c results: " >> randomtestcard.out
+	gcc -o randomtestcard dominion.c rngs.c randomtestcard.c $(CFLAGS)
+	randomtestcard >> randomtestcard.out
+	gcov dominion.c >> randomtestcard.out
 
-unittestresults.out: 
-	echo "cardtest1.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c cardtest1.c -o cardtest1 $(CFLAGS)
-	./cardtest1 >> unittestresults.out
-	echo "coverage for cardtest1.c:" >> unittestresults.out
+randomtestadventurer.out: randomtestadventurer.c dominion.c rngs.c
+	echo "randomtestadventurer.c results: " >> randomtestadventurer.out
+	gcc -o randomtestadventurer dominion.c rngs.c randomtestadventurer.c $(CFLAGS)
+	randomtestadventurer >> randomtestadventurer.out
+	gcov dominion.c >> randomtestadventurer.out
 
-	echo "cardtest2.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c cardtest2.c -o cardtest2 $(CFLAGS)
-	./cardtest2 >> unittestresults.out
-	echo "coverage for cardtest2.c:" >> unittestresults.out
-
-	echo "cardtest3.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c cardtest3.c -o cardtest3 $(CFLAGS)
-	./cardtest3 >> unittestresults.out
-	echo "coverage for cardtest3.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-
-	echo "cardtest4.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c cardtest4.c -o cardtest4 $(CFLAGS)
-	./cardtest4 >> unittestresults.out
-	echo "coverage for cardtest4.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-	
-	echo "unittest1.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c unittest1.c -o unittest1 $(CFLAGS)
-	./unittest1 >> unittestresults.out
-	echo "coverage for unittest1.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-	
-
-	echo "unittest2.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c unittest2.c -o unittest2 $(CFLAGS)
-	./unittest2 >> unittestresults.out
-	echo "coverage for unittest2.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-	
-
-	echo "unittest3.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c unittest3.c -o unittest3 $(CFLAGS)
-	./unittest3 >> unittestresults.out
-	echo "coverage for unittest3.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-	
-
-	echo "unittest4.c:" >> unittestresults.out
-	gcc  dominion.c  rngs.c unittest4.c -o unittest4 $(CFLAGS)
-	./unittest4 >> unittestresults.out
-	echo "coverage for unittest4.c:" >> unittestresults.out
-	gcov dominion.c >> unittestresults.out
-	
-
-randomtestcard.out:
-	echo "randomtestcard.c:" >> randomtestcard.out
-	gcc  dominion.c  rngs.c randomtestcard.c -o randomtestcard.out $(CFLAGS)
-	./randomtestcard.out >> randomtestresults.out
-	echo "coverage for randomtestcard.c:" >> randomtestresults.out
-	gcov dominion.c >> randomtestresults.out
-
-randomtestadventurer.out:
-	echo "randomtestadventurer.c:" >> randomtestadventurer.out
-	gcc  dominion.c  rngs.c randomtestadventurer.c -o randomtestadventurer.out $(CFLAGS)
-	./randomtestadventurer.out >> randomtestresults.out
-	echo "coverage for randomtestadventurer.c:" >> randomtestresults.out
-	gcov dominion.c >> randomtestresults.out
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittestresults.out randomtestcard.out randomtestadventurer.out
 
 clean:
-	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe *.gcov *.gcda *.gcno *.so *.out
+	rm -f *.o playdom.exe playdom test.exe test player player.exe testInit testInit.exe unittestresults.out cardtest1 cardtest2 cardtest3 cardtest4 unittest1 unittest2 unittest3 unittest4 randomtestcard randomtestadventurer randomtestcard.out randomtestadventurer.out *.gcov *.gcda *.gcno *.so
