--- a/projects/mcdokath/teammate1Dominion/dominion/Makefile
+++ b/projects/mcdokath/teammate1Dominion/dominion/Makefile
@@ -45,10 +45,11 @@ randomtestadventurer.out: randomtestadventurer.c dominion.o rngs.o
 	./randomtestadventurer >> randomtestadventurer.out
 	gcov dominion.c >> randomtestadventurer.out
 
-unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c cardtest3.c dominion.o rngs.o
+unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c cardtest2.c cardtest3.c cardtest4.c dominion.o rngs.o
 	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
 	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
 	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
 	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
 	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o $(CFLAGS)
 	gcc -o cardtest3 -g cardtest3.c dominion.o rngs.o $(CFLAGS)
@@ -66,6 +67,10 @@ unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c
 	
 	echo "cardtest3.c" >> unittestresults.out
 	./cardtest3 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+	
+	echo "cardtest4.c" >> unittestresults.out
+	./cardtest4 >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	
 	echo "unittest1.c" >> unittestresults.out
